Post Flair: Fix official Pinterest button vertical alignement by displaying the parent `span` as a block

--- a/modules/sharedaddy/sharing.css
+++ b/modules/sharedaddy/sharing.css
@@ -422,7 +422,7 @@ body .sd-content ul li.share-custom.no-icon a span {
 	margin: 0 !important;
 }
 
-.linkedin_button>span {
+.linkedin_button>span, .pinterest_button a {
 	display: block !important;
 }
 
